--- a/home.html
+++ b/home.html
@@ -6,18 +6,34 @@
     <title>
         Моя первая страница
     </title>
+
+    <div class="topnav">
+        <h1 id="l1">Моё хобби</h1>
+        <a href="#" id="r1">Главная</a>
+        <a href="about.html" id="r1">Обо мне</a>
+        <a href="contacts.html" id="r1">Обратная связь</a>     
+    </div>   
+    
 </head>
 <body>
-<div class="topnav">
-    <h1>Моё хобби</h1>
-    <a href="#">Главная</a>
-    <a href="about.html">Обо мне</a>
-    <a href="contacts.html">Обратная связь</a>     
-</div>   
 
+<div>
+    <p>
+        <h1 id="p1">
+            Python Developer
+        <h1>
+    </p>
+</div>
 
 <div class="content">
-
+    <p>
+        <img src="https://4.downloader.disk.yandex.ru/preview/b3a69eac5a0ef1d4aa6745f023b886899b2000b900226bcd6bac2a7a2031aafc/inf/TxUsFsMMY8CrQb2dp0HTsS0K4_VnroYc2b87Sxa7Gz7i5feJ09Fq98RzuromfpDgOEIU_d8N6GwoLP3rFGUupQ==?uid=38255122&filename=2021-01-03+11-08-35.JPG&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&tknv=v2&owner_uid=38255122&size=1920x902" 
+        alt="Bulat" width="400" height="280">
+        <p id="t">Меня зовут Булат.
+            Я изучаю full stack разработку на Python. Сейчас мне нужно создать страничку, но я столкнулся со сложностями по части стилей. Мне кажется, их так много, что не понятно, чем пользоваться.
+        
+        </p>
+    </p>
 </div>
 </body>
 </html>
