--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 
 <div class="content">
     <p>
-        <img src="https://4.downloader.disk.yandex.ru/preview/b3a69eac5a0ef1d4aa6745f023b886899b2000b900226bcd6bac2a7a2031aafc/inf/TxUsFsMMY8CrQb2dp0HTsS0K4_VnroYc2b87Sxa7Gz7i5feJ09Fq98RzuromfpDgOEIU_d8N6GwoLP3rFGUupQ==?uid=38255122&filename=2021-01-03+11-08-35.JPG&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&tknv=v2&owner_uid=38255122&size=1920x902" 
+        <img src="https://4.downloader.disk.yandex.ru/preview/fce36bb3a5b4f2f961e1522cc0e0787c5980ef64a2f6cda6049a90b893a14575/inf/4Rc9RU9N9N8Yvc1wrmQgsdbgZdQbnKvhKjOeIENfsbiGRX_ShPux3xvUO5EczjVGKshRQjfStmIVUST1GP-43Q%3D%3D?uid=38255122&filename=2022-09-28%2016-49-47.JPG&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&owner_uid=38255122&tknv=v2&size=1665x950" 
         alt="Bulat" width="400" height="280">
         <p id="t">Меня зовут Булат. Я изучаю full stack разработку на Python. Сейчас мне нужно создать страничку, но я столкнулся со сложностями по части стилей. Мне кажется, их так много, что не понятно, чем пользоваться.</p>
     </p>
