--- a/contacts.html
+++ b/contacts.html
@@ -53,18 +53,34 @@
     <a href="https://github.com/expowheella">github.com/expowheella
 </div>
 
-    <!-- E5.4. Работа с событиями -->
+
 <div>
-    <!-- Способ №1 вызова функции clickMe() -->
+    <!-- E5.4. Работа с событиями -->
+    <!-- Способ №1 вызов функции clickMe() -->
     <button id="mybutton1" onclick="clickMe()"">Button 1</button>
     
-    <!-- Способ №2 вызова функции clickMe() -->
+    <!-- Способ №2 вызов функции clickMe() -->
     <button id="mybutton2">Button 2</button>
+
+    <button id="btnbtn">Button 3</button>
 
     <!-- function clickMe() is imported from js/e_5_4.js -->
     <script src="js/e_5_4.js"></script>
-
 </div>
+
+
+<div>
+    <!-- E5.5. Объект события -->
+    <!-- onclick -- это название события, которое передается в обработчик
+         событий в файл: e_5_5.js -->
+    <button id="e55">E.5.5</button>
+
+    <!-- import js/e_5_5.js -->
+    <script src="js/e_5_5.js"></script>
+</div>
+
+
+
 
 </body>
 </html>
